...
"theme_light" = "Light";
"theme_dark" = "Dark";
"export_as" = "Export As";
"export_fonts_csv" = "Export Fonts Tab CSV";
"export_fonts_json" = "Export Fonts Tab JSON";
"export_files_csv" = "Export Files Tab CSV";
"export_files_json" = "Export Files Tab JSON";
"font_name" = "Font Name";
"file_type" = "File Type";
"description" = "Description";
"count" = "Count";
"file_path" = "File Path";
"file_name" = "File Name";
...
